k8s-experimento1.yaml
###################################
# GESTOR DE ENTRENAMIENTOS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entrenamientos
  labels:
    app: entrenamientos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entrenamientos
  template:
    metadata:
      labels:
        app: entrenamientos
    spec:
      restartPolicy: Always
      containers:
        - name: entrenamientos
          image: us-central1-docker.pkg.dev/proyecto1-experimentos/experimentos-misw4501-g1/gentrenamientos:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: entrenamientos-service
  annotations:
    cloud.google.com/backend-config: '{"default": "entrenamientos-config"}'
spec:
  type: NodePort
  selector:
    app: entrenamientos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31017
---
###################################
# GESTOR DE SERVICIOS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicios
  labels:
    app: servicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicios
  template:
    metadata:
      labels:
        app: servicios
    spec:
      restartPolicy: Always
      containers:
        - name: servicios
          image: us-central1-docker.pkg.dev/proyecto1-experimentos/experimentos-misw4501-g1/gservicios:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always                          
---
kind: Service
apiVersion: v1
metadata:
  name: servicios-service
  annotations:
    cloud.google.com/backend-config: '{"default": "servicios-config"}'
spec:
  type: NodePort
  selector:
    app: servicios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31018
---
