k8s-experimento2.yaml
###################################
# GESTOR PLAN NUTRICIONAL
###################################s
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plannutricional
  labels:
    app: plannutricional
spec:
  replicas: 6
  selector:
    matchLabels:
      app: plannutricional
  template:
    metadata:
      labels:
        app: plannutricional
    spec:
      containers:
        - name: plannutricional
          image: us-central1-docker.pkg.dev/proyecto1-experimentos/experimentos-misw4501-g1-exp2/gplannutricional:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always 
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 280m                        
---
kind: Service
apiVersion: v1
metadata:
  name: plannutricional-service
  annotations:
    cloud.google.com/backend-config: '{"default": "plannutricional-config"}'
spec:
  type: NodePort
  selector:
    app: plannutricional
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31030
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: plannutricional-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: plannutricional
#   minReplicas: 4
#   maxReplicas: 6
#   targetCPUUtilizationPercentage: 20   
---
###################################
# GESTOR ENTRENAMIENTOS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entrenamientos
  labels:
    app: entrenamientos
spec:
  replicas: 6
  selector:
    matchLabels:
      app: entrenamientos
  template:
    metadata:
      labels:
        app: entrenamientos
    spec:
      containers:
        - name: entrenamientos
          image: us-central1-docker.pkg.dev/proyecto1-experimentos/experimentos-misw4501-g1-exp2/gentrenamientos:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 280m                            
---
kind: Service
apiVersion: v1
metadata:
  name: entrenamientos-service
  annotations:
    cloud.google.com/backend-config: '{"default": "entrenamientos-config"}'
spec:
  type: NodePort
  selector:
    app: entrenamientos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31031
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: entrenamientos-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: entrenamientos
#   minReplicas: 4
#   maxReplicas: 6
#   targetCPUUtilizationPercentage: 20 
---
###################################
# GESTOR USUARIOS
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios
  labels:
    app: usuarios
spec:
  replicas: 12
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: us-central1-docker.pkg.dev/proyecto1-experimentos/experimentos-misw4501-g1-exp2/gusuarios:1.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 300m
            limits:
              cpu: 330m                   
---
kind: Service
apiVersion: v1
metadata:
  name: usuarios-service
  annotations:
    cloud.google.com/backend-config: '{"default": "usuarios-config"}'
spec:
  type: NodePort
  selector:
    app: usuarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31032
# ---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: usuarios-hpa
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: usuarios
#   minReplicas: 8
#   maxReplicas: 12
#   targetCPUUtilizationPercentage: 20
