k8s-ingress-deployment1.yaml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-epx-1-k8s
  labels:
    name: gateway-ingress-epx-1-k8s
spec:
  rules:
  - http:
      paths:
      - path: /entrenamientos
        pathType: Prefix
        backend:
          service:
            name: entrenamientos-service
            port: 
              number: 80
      - path: /servicios
        pathType: Prefix
        backend:
          service:
            name: servicios-service
            port: 
              number: 80
