k8s-ingress-deployment2.yaml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-epx-2-k8s
  labels:
    name: gateway-ingress-epx-2-k8s
spec:
  rules:
  - http:
      paths:
      - path: /nutricion
        pathType: Prefix
        backend:
          service:
            name: plannutricional-service
            port: 
              number: 80
      - path: /entrenamientos
        pathType: Prefix
        backend:
          service:
            name: entrenamientos-service
            port: 
              number: 80
      - path: /usuarios
        pathType: Prefix
        backend:
          service:
            name: usuarios-service
            port: 
              number: 80
